Adds suport for the Gemini LLM API, desired for its huge context window

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ target/
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
 
+# IntelliJ workspace
+.idea
 
 # Added by cargo
 
